fixed the alignment issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -237,7 +237,7 @@ canvas {
 
 .container {
 	display: flex;
-	align-items: flex-end;
+	align-items: flex-start;
 	color: white;
 	width: 100%;
 	justify-content: center;
@@ -253,7 +253,11 @@ canvas {
 
 .podium__item {
 	width: 250px;
+	height:100%;
 	transition: 0.5s;
+	display:grid;
+	grid-template-columns:100%;
+	grid-template-rows:80% 20%;
 }
 
 .podium__item:hover {
